K8S/key.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: pakar
  labels:
    app: keycloak
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: keycloak/keycloak
          args: ["start", "--spi-theme-static-max-age=-1", "--spi-theme-cache-themes=false", "--spi-theme-cache-templates=false"]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe: 
            httpGet:
              scheme: HTTP
              path: /realms/master
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
      volumes: []


---

apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: pakar
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: keycloak
  type: ClusterIP
