K8S/key-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dev
    certmanager.k8s.io/cluster-issuer: letsencrypt-dev
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: key-ingress
  namespace: pakar
spec:
  rules:
  - host: key.gke-dev.linnovate.net
    http:
      paths:
      - backend:
          service:
            name: keycloak-svc
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - key.gke-dev.linnovate.net
    secretName: key-secret
status:
  loadBalancer:
    ingress:
    - ip: <ip>
